Added A320 sacrifice pic

--- a/projects/A320/index.html
+++ b/projects/A320/index.html
@@ -96,9 +96,9 @@
 		<hr />
 	</div>
 
-	<!--<div class="article-two">
-		<a href="/images/a320/zinc_weight.jpg"><img src="/images/a320/zinc_weight.jpg" width="100%" /></a>
-	</div>--><div class="article-two">
+	<div class="article-two">
+		<a href="/images/a320/sacrifice.jpg"><img src="/images/a320/sacrifice.jpg" width="100%" /></a>
+	</div><div class="article-two">
 		<a href="/images/a320/zinc_weight.jpg"><img src="/images/a320/zinc_weight.jpg" width="100%" /></a>
 	</div><div class="article-one">
 		Each fuselage contains a zinc weight in order to keep the plane resting on its nose gear. I needed to figure out the minimum size hole that I had to cut to remove it, which required sacrificing a kit.
@@ -163,6 +163,13 @@
 
 
 	<!--
+	
+	<div class="article-one">
+		<h2>Stand</h2>
+		<hr />
+	</div>
+
+
 	<div class="article-one">
 		<a href="https://media.darkwire.com/IMG_3074.JPG"><img src="https://media.darkwire.com/IMG_3074.JPG" alt="image-left" class="align-center" width="100%" /></a>
 		This is the custom circuit board, fully populated and ready to be installed inside the fuselage. I could have saved space by using surface mount parts but the overall footprint for the resistors wasn’t that different when mounting them vertically. The main IC is an ATTiny84.
