Wine cellar update

--- a/projects/wine-cellar/index.html
+++ b/projects/wine-cellar/index.html
@@ -70,6 +70,38 @@
 		Twelve rows of bottles plus space underneath for boxes. Moving that original top row to the bottom of the rack was the right call.
 	</div>
 
+	<div class="article-one">
+		<a href="/images/wine-cellar/cat_test.jpg"><img src="/images/wine-cellar/cat_test.jpg" width="100%" /></a>
+		Kitty testing the LED light strip prior to installation. I went with a standard 2-meter warm white 5v strip so that I could run it off batteries.
+	</div>
+
+
+	<div class="article-one">
+		<a href="/images/wine-cellar/reed_switch.jpg"><img src="/images/wine-cellar/reed_switch.jpg" width="100%" /></a>
+		I used a magnetic reed switch mounted on the door to turn the LED strip on and off. The closet is rarely open for more than a minute at a time so running the lighting off batteries
+		isn't a problem.
+	</div>
+
+	<div class="article-two">
+		<a href="/images/wine-cellar/lighting_test1.jpg"><img src="/images/wine-cellar/lighting_test1.jpg" width="100%" /></a>
+	</div><div class="article-two">
+		<a href="/images/wine-cellar/lighting_test2.jpg"><img src="/images/wine-cellar/lighting_test2.jpg" width="100%" /></a>
+	</div><div class="article-one">
+		I mounted a D-cell battery pack above the door and simply stapled the LED strip into the door frame. The strip had a protective clear rubber coating over the front so I wasn't at
+		risk of shorting it out. The lighting was a huge improvement and really helped change it from feeling like a utility closet to a wine cellar.
+	</div>
+
+	<div class="article-one">
+		<a href="/images/wine-cellar/dimmer_v1.jpg"><img src="/images/wine-cellar/dimmer_v1.jpg" width="100%" /></a>
+		To adjust the light level I was going to build a circuit but found these handy PWM controllers for less than $10 on Amazon. They take anywhere from 1.8 to 12v and switch at
+		around 25kHz so there is no issue with visible flickering.
+	</div>
+
+	<div class="article-one">
+		<a href="/images/wine-cellar/dimmer_v2.jpg"><img src="/images/wine-cellar/dimmer_v2.jpg" width="100%" /></a>
+		I had some issues with the magnetic reed switch sticking because my original design was lazy and I was running it well above the 50mA specified current level. The good news is that I was
+		able to stick a transistor in the circuit to handle the LED current and everything has been fine since then.
+	</div>
 </div>
 
 </body>
