Added new touch pad

--- a/projects/cablights/index.html
+++ b/projects/cablights/index.html
@@ -44,6 +44,16 @@
 		The touch sensor will eventually converted into a nicer looking panel but for now is just tacked in place with hot glue.
 	</div>
 
+	<div class="article-two">
+		<a href="/images/cablights/channel_mount.jpg"><img src="/images/cablights/touch_pad.jpg" width="100%" /></a>
+	</div><div class="article-two">
+		<a href="/images/cablights/touch_sensor.jpg"><img src="/images/cablights/touch_pad_led.jpg" width="100%" /></a>
+	</div><div class="article-one">
+		This is the updated touch pad. I designed a 3D-printed enclosure to protect the touch sensor hardware as well as provide a larger touch surface. I used copper foil tape connected to the touch sensor
+		in order to make the entire front surface touch-sensetive. Because it's a capacitive sensor it is able to function through the 1.5mm thick plastic surface. I also mounted the sensor board so that the
+		activity LED would be centered in the square and can be seen when touching the pad.
+	</div>
+
 	<div class="article-one">
 		 <a href="/images/cablights/led_power.jpg"><img src="/images/cablights/led_power.jpg" width="100%" /></a>
 		I mounted the control and power circuitry in the cabinet above my microwave. It already had a power outlet available and provided a central location to run all the wires to. I used a surface mount
