Added touch pad internals

--- a/projects/cablights/index.html
+++ b/projects/cablights/index.html
@@ -45,14 +45,24 @@
 	</div>
 
 	<div class="article-two">
+		<a href="/images/cablights/channel_mount.jpg"><img src="/images/cablights/touch_pad_model.jpg" width="100%" /></a>
+	</div><div class="article-two">
+		<a href="/images/cablights/touch_sensor.jpg"><img src="/images/cablights/touch_pad_internals.jpg" width="100%" /></a>
+	</div><div class="article-one">
+		This is the updated touch pad 3D model and internals. I designed it so that the touch sensor board LED would be centered on the front of the pad and would be visible when active. I used copper foil
+		tape wired to the sensor pin to expand the touch sensitive area to include the entire front of the touch pad. Because the sensor is capacitive it is able to detect touches through the 1.5mm plastic
+		of the enclosure.
+	</div>
+
+	<div class="article-two">
 		<a href="/images/cablights/channel_mount.jpg"><img src="/images/cablights/touch_pad.jpg" width="100%" /></a>
 	</div><div class="article-two">
 		<a href="/images/cablights/touch_sensor.jpg"><img src="/images/cablights/touch_pad_led.jpg" width="100%" /></a>
 	</div><div class="article-one">
-		This is the updated touch pad. I designed a 3D-printed enclosure to protect the touch sensor hardware as well as provide a larger touch surface. I used copper foil tape connected to the touch sensor
-		in order to make the entire front surface touch-sensetive. Because it's a capacitive sensor it is able to function through the 1.5mm thick plastic surface. I also mounted the sensor board so that the
-		activity LED would be centered in the square and can be seen when touching the pad.
+		The mounted touch pad provides a tidy look as well as providing a much larger target area. Additionally, it protects the electronics of the sensor board from hard taps and can safely be wiped down
+		with typical cleaning products.
 	</div>
+
 
 	<div class="article-one">
 		 <a href="/images/cablights/led_power.jpg"><img src="/images/cablights/led_power.jpg" width="100%" /></a>
