Fixed 3D model image link

--- a/projects/cablights/index.html
+++ b/projects/cablights/index.html
@@ -45,7 +45,7 @@
 	</div>
 
 	<div class="article-two">
-		<a href="/images/cablights/channel_mount.jpg"><img src="/images/cablights/touch_pad_model.jpg" width="100%" /></a>
+		<a href="/images/cablights/channel_mount.jpg"><img src="/images/cablights/touch_pad_model.png" width="100%" /></a>
 	</div><div class="article-two">
 		<a href="/images/cablights/touch_sensor.jpg"><img src="/images/cablights/touch_pad_internals.jpg" width="100%" /></a>
 	</div><div class="article-one">
