Fixed cablight original image links

--- a/projects/cablights/index.html
+++ b/projects/cablights/index.html
@@ -45,9 +45,9 @@
 	</div>
 
 	<div class="article-two">
-		<a href="/images/cablights/channel_mount.jpg"><img src="/images/cablights/touch_pad_model.png" width="100%" /></a>
+		<a href="/images/cablights/touch_pad_model.png"><img src="/images/cablights/touch_pad_model.png" width="100%" /></a>
 	</div><div class="article-two">
-		<a href="/images/cablights/touch_sensor.jpg"><img src="/images/cablights/touch_pad_internals.jpg" width="100%" /></a>
+		<a href="/images/cablights/touch_pad_internals.jpg"><img src="/images/cablights/touch_pad_internals.jpg" width="100%" /></a>
 	</div><div class="article-one">
 		This is the updated touch pad 3D model and internals. I designed it so that the touch sensor board LED would be centered on the front of the pad and would be visible when active. I used copper foil
 		tape wired to the sensor pin to expand the touch sensitive area to include the entire front of the touch pad. Because the sensor is capacitive it is able to detect touches through the 1.5mm plastic
@@ -55,9 +55,9 @@
 	</div>
 
 	<div class="article-two">
-		<a href="/images/cablights/channel_mount.jpg"><img src="/images/cablights/touch_pad.jpg" width="100%" /></a>
+		<a href="/images/cablights/touch_pad.jpg"><img src="/images/cablights/touch_pad.jpg" width="100%" /></a>
 	</div><div class="article-two">
-		<a href="/images/cablights/touch_sensor.jpg"><img src="/images/cablights/touch_pad_led.jpg" width="100%" /></a>
+		<a href="/images/cablights/touch_pad_led.jpg"><img src="/images/cablights/touch_pad_led.jpg" width="100%" /></a>
 	</div><div class="article-one">
 		The mounted touch pad provides a tidy look as well as providing a much larger target area. Additionally, it protects the electronics of the sensor board from hard taps and can safely be wiped down
 		with typical cleaning products.
