Moved cablights gifs to Google Storage

--- a/projects/cablights/index.html
+++ b/projects/cablights/index.html
@@ -76,7 +76,7 @@
 	</div>
 
 	<div class="article-one">
-		<img src="https://media.darkwire.com/cablights_normal_demo.gif" width="100%" />
+		<img src="https://storage.googleapis.com/media.darkwire.com/cablights_normal_demo.gif" width="100%" />
 		Normal Mode:</p>
 		<ul>
 		<li>Off</li>
@@ -87,7 +87,7 @@
 	</div>
 
 	<div class="article-one"> 
-		<img src="https://media.darkwire.com/cablights_holiday_demo.gif" width="100%" />
+		<img src="https://storage.googleapis.com/media.darkwire.com/cablights_holiday_demo.gif" width="100%" />
 		Holiday Mode:</p>
 		<ul>
 		<li>New Year’s Day</li>
@@ -103,7 +103,7 @@
 	</div>
 
 	<div class="article-one"> 
-		<img src="https://media.darkwire.com/cablights_sports_demo.gif" width="100%" />
+		<img src="https://storage.googleapis.com/media.darkwire.com/cablights_sports_demo.gif" width="100%" />
 		Game Day Mode:</p>
 		<ul>
 		<li>Denver Broncos</li>
@@ -114,7 +114,7 @@
 	</div>
 
 	<div class="article-one"> 
-		<img src="https://media.darkwire.com/cablights_solids_demo.gif" width="100%" />
+		<img src="https://storage.googleapis.com/media.darkwire.com/cablights_solids_demo.gif" width="100%" />
 		Solid Color Mode:</p>
 		<ul>
 		<li>Red</li>
